--- a/studio/src/app/popovers/editor/app-slot-type/app-slot-type.scss
+++ b/studio/src/app/popovers/editor/app-slot-type/app-slot-type.scss
@@ -1,4 +1,8 @@
 app-slot-type {
+  ion-toolbar {
+    padding: 16px;
+  }
+
   div {
     h2 {
       color: var(--ion-color-primary);
